updated uglify updated top bar vars for hover added galleries and captions styles added new toggle for menu and dropped hamburger fixed some comment styles hide social icons in top bar on mobile

--- a/theme/templates/sass/_settings.scss
+++ b/theme/templates/sass/_settings.scss
@@ -1412,9 +1412,9 @@ $topbar-height: rem-calc(45);
 
 // Set the link colors and styles for top-level nav
 $topbar-link-color: $white;
-$topbar-link-color-hover: $white;
-$topbar-link-color-active: $white;
-$topbar-link-color-active-hover: $white;
+$topbar-link-color-hover: scale-color($topbar-link-color, $lightness: -14%);
+$topbar-link-color-active: scale-color($topbar-link-color, $lightness: -14%);
+$topbar-link-color-active-hover: $topbar-link-color;
 $topbar-link-weight: $font-weight-normal;
 $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
