--- a/theme/templates/sass/layout/_header.scss
+++ b/theme/templates/sass/layout/_header.scss
@@ -7,4 +7,23 @@
 	.top-bar .name span a {
 		width: auto;
 	}
+	.social-navigation {
+		@media #{$small-only} {
+			display: none;
+		}
+	}
+}
+
+.toggle-icon {
+	a:after {
+		@include fontawesome;
+
+		padding-left: rem-calc(5);
+		content: "\f067";
+	}
+	.expanded & {
+		a:after {
+			content: "\f00d";
+		}
+	}
 }
