--- a/theme/templates/sass/navigation/_social.scss
+++ b/theme/templates/sass/navigation/_social.scss
@@ -100,7 +100,4 @@
 			}
 		}
 	}
-	@media #{$small-only} {
-		display: none;
-	}
 }
